# pydefine

./: README.md  pyproject.toml
.github/workflows/: main.yml
pydefine/: __init__.py  define.py  get_group.py  process.py  read.py  write.py
