[tool.poetry]
name = "pydefine"
version = "0.2.0"
description = "Define (ancient) words using LLM"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^2.2.1"
tqdm = "^4.65.0"
pyopenaichat = {git = "https://github.com/ivandustin/pyopenaichat.git"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydefine = "pydefine.__init__:main"
